--- a/src/pages/layout.module.css
+++ b/src/pages/layout.module.css
@@ -6,7 +6,7 @@
 }
 
 .heading {
-  color: rebeccapurple;
+  color: rgba(0, 108, 32);
 }
 
 .nav-links {
@@ -21,4 +21,11 @@
 
 .nav-link-text {
   color: black;
+}
+
+.site-title {
+  font-size: 3rem;
+  color: gray;
+  font-weight: 700;
+  margin: 3rem 0;
 }
